# ollie-ollama-gui

./: .gitignore  CLAUDE.md  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
app/: package-lock.json  package.json
app/src/: App.tsx  index.css  main.tsx
app/src/components/: Dialog.tsx  MainPanel.tsx  McpServerManager.tsx  McpToolList.tsx  Message.tsx  ModeSelectionWizard.tsx  ModelPicker.tsx  ModelSelector.tsx  MonitoringDashboard.tsx  Notifications.tsx  ParametersPanel.tsx  Sidebar.tsx  ThemeToggle.tsx  TitleBar.tsx  TopBar.tsx
app/src/lib/: contextBudget.ts  markdown.tsx  pdf.ts  shortcuts.ts
app/src/routes/: models.tsx  settings.tsx
app/src/store/: chatStore.ts  mcpStore.ts  modelsStore.ts  monitoringStore.ts  settingsStore.ts  uiStore.ts
docs/: ARCHITECTURE.md
docs/superpowers/specs/: 2026-05-25-file-attachments-shortcuts-export-design.md
scripts/: install-tauri-deps-ubuntu.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial_schema.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: db.rs
src-tauri/src/db/: mod.rs
